--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uppy/core": "^3.9.3",
+    "@uppy/dashboard": "^3.7.5",
+    "@uppy/drag-drop": "^3.0.3",
+    "@uppy/file-input": "^3.1.0",
+    "@uppy/progress-bar": "^3.1.0",
+    "@uppy/react": "^3.2.2",
+    "@uppy/xhr-upload": "^3.6.4",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
